# ethos-os

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  ethos_os.db  pyproject.toml  seed.py
.github/workflows/: ci.yml
.planning/: AGENTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
.planning/v0.1/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
alembic/: env.py
alembic/versions/: .gitkeep  001_initial.py  002_gates_audit.py  003_agents_heartbeats.py
docs/: ARCHITECTURE.md  ONTOLOGY.md
ethos_os/: __init__.py  config.py  db.py  main.py
ethos_os/agents/: __init__.py  chief_of_staff.py  executor.py  registry.py
ethos_os/api/: __init__.py  agents.py  agents_registry.py  chat.py  dashboard.py  gates.py  hierarchy.py  orchestration.py  sse.py
ethos_os/dashboard/: __init__.py  chat.py  routes.py
ethos_os/execution/: __init__.py  agent.py  executor.py  failure.py  heartbeat.py  orchestration.py  scheduler.py
ethos_os/gates/: __init__.py  dashboard.py  trigger.py
ethos_os/llm/: __init__.py  base.py  config.py
ethos_os/memory/: __init__.py  chunker.py  collections.py  embeddings.py  indexer.py  initiative_linker.py  injector.py  qdrant_client.py  search.py  working.py
plans/: PRD.md
tests/: test_agent_adapters.py  test_agent_registry.py  test_api.py  test_chat.py  test_gate_api.py  test_gates.py  test_heartbeat.py  test_llm_providers.py  test_orchestration.py  test_vector_memory.py
(+80 files in other folders)
